@@ -17,6 +17,7 @@ gem 'pg'
 gem 'omniauth-twitter'
 gem 'omniauth-facebook'
 gem 'omniauth-google-oauth2'
+gem 'omniauth-windowslive', git: 'git://github.com/dangerp/omniauth-windowslive.git'
 # gem 'omniauth-flattr'
 # gem 'omniauth-openid'
 # gem 'omniauth-github'
