@@ -135,16 +135,16 @@ class Item < ActiveRecord::Base
     # self.body.gsub!("&mdash;", "&#45;")
     # self.body.gsub!("&#180;", "&#39;")
     # self.body.gsub!("&#96;", "&#39;")
-    self.body.gsub!("&lsquo;", "\'")
-    self.body.gsub!("&rsquo;", "\'")
-    self.body.gsub!("&ldquo;", "\"")
-    self.body.gsub!("&rdquo;", "\"")
-    self.body.gsub!("&ndash;", "-")
-    self.body.gsub!("&mdash;", "-")
-    self.body.gsub!("&#180;", "\'")
-    self.body.gsub!("&#96;", "\'")
-    self.body.gsub!("&nbsp;", " ")
-    self.body.gsub!("&hellip;", "...")
+    self.body.to_s.gsub!("&lsquo;", "\'")
+    self.body.to_s.gsub!("&rsquo;", "\'")
+    self.body.to_s.gsub!("&ldquo;", "\"")
+    self.body.to_s.gsub!("&rdquo;", "\"")
+    self.body.to_s.gsub!("&ndash;", "-")
+    self.body.to_s.gsub!("&mdash;", "-")
+    self.body.to_s.gsub!("&#180;", "\'")
+    self.body.to_s.gsub!("&#96;", "\'")
+    self.body.to_s.gsub!("&nbsp;", " ")
+    self.body.to_s.gsub!("&hellip;", "...")
     true
   end
 
