@@ -59,6 +59,13 @@
           </div>
         </div>
 
+        <div class='control-group'>
+          <div class="horizontal-divider"></div>
+          <div class="controls">
+            <b>Or login with your existing services:</b>
+          </div>
+        </div>
+
         <div class="control-group">
           <div class="controls">
             <%= render partial: '/shared/social_connects' %>
