@@ -11,7 +11,9 @@
           tags: %w(p b i u a br strong div ul ol li),
           attributes: %w(href) %>
   </p>
-  <span class="comment_date"><%= time_ago_in_words(comment.created_at) %> ago </span>
+  <span class="comment_date">
+    <%= time_ago_in_words(comment.created_at) %> ago
+  </span>
 
 
   <%# this enables only 1 level of replies %>
@@ -28,15 +30,19 @@
       <%= link_to 'Delete Comment',
           comment_path(comment),
           method: :delete, remote: true, class: "btn small danger",
-          'data-disable-with' => "Deleting...",
-          confirm: "Are you sure you want to delete this comment?"
+          data: {
+            disable_with: 'Deleting...',
+            confirm: "Are you sure you want to delete this comment?"
+          }
       %>
     <% end %>
   </div>
   
   <% if Opinio.accept_replies && !reply %>
     <ul id="comment_<%= comment.id %>_replies" class="replies">
-      <%= render partial: "opinio/comments/comment", collection: comment.comments, locals: {reply: true} %>
+      <%= render partial: "opinio/comments/comment",
+            collection: comment.comments, locals: {reply: true}
+      %>
     </ul>
   <% end %>
 </li>
