@@ -4,3 +4,6 @@
 <div class="socials pull-left">
   <%= link_to "Login with Twitter", "/auth/twitter", class: "zocial twitter" %>
 </div>
+<div class="socials pull-left">
+  <%= link_to "Login with Windows Live", "/auth/windowslive", class: "zocial windows" %>
+</div>
