@@ -68,8 +68,8 @@ html
         ' If you choose to receive email alerts, 
         ' you should provide us your email address by replying to this message.
       p
-        ' To edit your Profile please visit this link.
-        = link_to 'Edit Profile', @url
+        ' To edit your Profile please visit this link:
+        =' link_to 'Edit Profile', @url
       p
         ' Don't hesitate to contact us, just reply to this email with any doubts, questions,
         ' suggestions or ideas that you have. Your contribution will be highly appreciated.
