@@ -1,7 +1,6 @@
 require 'spec_helper'
 
 describe User do
-  require 'sidekiq/testing/inline'
 
   describe "with Job Queues" do
     it "should enqueue the new user email and welcome email" do
